Get multi-res backstretch working; style home-thumb box to be awesome; fix nav issue;

--- a/src/scss/_style.sass
+++ b/src/scss/_style.sass
@@ -36,15 +36,21 @@ body
     font-style: normal
     font-weight: normal
     overflow-x: hidden
+    @include media-breakpoint-down(sm)
+       font-size: .8rem
+
 
 html, body
     width: 100%
     height: 100%
 
+
+
 /*---------------------------------------
  *    0 Typography
+ * Bootstrap sets body at 1rem
  *-----------------------------------------*/
-
+//
 //h1, h2, h3, h4, h5, h6
 //  font-style: normal
 //  font-weight: bold
@@ -56,10 +62,9 @@ html, body
 //  line-height: normal
 //
 //h2
-//  color: #454545
-//  font-size: 35px
-//  line-height: 52px
-//  margin-top: 0
+    @include media-breakpoint-down(sm)
+        font-size
+
 //
 //h3
 //  color: #585858
@@ -79,10 +84,24 @@ p
 //  line-height: 25px
 //  letter-spacing: 0.2px
 
+//$line-height-base: 1.5 !default;
+//
+//$font-size-h1: 2.5rem !default;
+//$font-size-h2: 2rem !default;
+//$font-size-h3: 1.75rem !default;
+//$font-size-h4: 1.5rem !default;
+//$font-size-h5: 1.25rem !default;
+//$font-size-h6: 1rem !default;
+//MOVE TO BOOTSTRAP RELATED FILE
+
+@include media-breakpoint-down(sm)
+    h1
+        font-size: 2rem
+    h2
+        font-size: 1.5rem
+
+
 .spaced
-  color: #585858
-  font-size: 16px
-  line-height: 32px
   letter-spacing: 6px
   text-transform: uppercase
 
@@ -101,6 +120,7 @@ p
     color: $gray-lighter
 .text-gray-lightest
     color: $gray-lightest
+.text-white
 
 // UCR Colors
 $ucr-blue:  #2D6CC0
@@ -227,7 +247,7 @@ a
   border: none
   margin-bottom: 0
   background-color: #ffffff
-  padding: 0
+  //padding: 0
   .navbar-brand
     color: #444
     font-weight: normal
@@ -244,27 +264,80 @@ ul.navbar-nav li a
   -webkit-transition: all ease-in-out 0.4s
   transition: all ease-in-out 0.4s
   /*padding: 0 6px;
-  margin: 15px 8px
+  //margin: 15px 8px
 
 /*---------------------------------------
  *    5 Home section
  *-----------------------------------------*/
 
 #home
-  background-size: cover
-  display: -webkit-box
-  display: -webkit-flex
-  display: -ms-flexbox
-  display: flex
-  -webkit-box-align: center
-  -webkit-align-items: center
-  -ms-flex-align: center
-  align-items: center
-  height: 100vh
-  position: relative
-  .home-thumb
-    position: absolute
-    top: 0
+    background-size: cover
+    display: -webkit-box
+    display: -webkit-flex
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-align: center
+    -webkit-align-items: center
+    -ms-flex-align: center
+    align-items: center
+    height: 100vh
+    position: relative
+    .home-thumb
+        position: absolute
+        bottom: 0
+        left: 0
+        max-width: 100%
+        //margin: 2rem
+        background-color: $gray
+        opacity: .7
+        .home-thumb-box
+            opacity: 1
+            padding: 1rem
+        .ucr-img
+            height: 35px
+            @include media-breakpoint-up(sm)  //up from 576px?
+              height: 58px
+        .section-btn
+            width: 11em
+            background-color: $gray-lightest
+            color: black
+            white-space: normal
+
+
+
+
+
+@media (max-width: 980px)
+    #home
+        height: 55vh
+
+@media (max-width: 768px)
+    .navbar-default .navbar-nav li a
+        display: inline-block
+    #home
+        height: 85vh
+
+@media (max-width: 767px)
+    #resume .resume-thumb-sec
+        margin-top: 45px
+
+@media (max-width: 580px)
+    //h1
+    //    font-size: 40px
+    //h2
+    //    font-size: 30px
+    #home
+        height: 95vh
+    #contact .contact-info
+        margin-top: 45px
+
+@media (max-width: 320px)
+    #home
+        height: 125vh
+
+
+
+
 
 /*---------------------------------------
  *    6 About section
@@ -482,38 +555,6 @@ footer
 /*---------------------------------------
  *    13 Mobile Responsive styles
  *-----------------------------------------*/
-
-@media (max-width: 980px)
-  #home
-    height: 55vh
-
-@media (max-width: 768px)
-  .navbar-default .navbar-nav li a
-    display: inline-block
-  #home
-    height: 85vh
-
-@media (max-width: 767px)
-  #home .home-thumb
-    position: relative
-  #resume .resume-thumb-sec
-    margin-top: 45px
-
-@media (max-width: 580px)
-  h1
-    font-size: 40px
-  h2
-    font-size: 30px
-  #home
-    height: 95vh
-  #contact .contact-info
-    margin-top: 45px
-
-@media (max-width: 320px)
-  #home
-    height: 125vh
-
-
 
 
 
